--- a/style.css
+++ b/style.css
@@ -64,4 +64,35 @@ nav li{
     padding-bottom:30px;
   }
   article h2{
-    font-size: 36px;
+
+      font-size: 36px;
+      padding-left: 30px;
+    }
+    article p{
+      height: 260px;
+      width: 95%;
+      overflow: auto;
+      font-size: 18px;
+      font-style: italic;
+      line-height: 24px;
+      padding-left: 30px;
+    }
+    div button{
+      height: 75px;
+      width: 75%;
+      margin-bottom: 0;
+      margin-top: 30px;
+      margin-left: 30px;
+      border-radius: 5px;
+    }
+    button:hover{
+    background-color: red;
+    }
+     .footer{
+      position: relative;
+      clear: both;
+      margin-top: 30px;
+      height: 70px;
+      width: 100%;
+      background-color: grey;
+    }
